# mexicanbonora

./: .dockerignore  Dockerfile  README.md  devbox.json  docker-compose.yml  fly.toml  pyproject.toml  shell.nix
mexicanbonora/: __main__.py  chat.py  image.py  telegram.py  train.py  translate.py  utils.py
