[tool.poetry]
name = "mexicanbonora"
version = "0.1.0"
description = ""
authors = ["rikyiso01 <riky.isola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = { extras = ["webhooks"], version = "^20.5" }
translators = "^5.8.3"
chatterbot = { git = "https://github.com/ShoneGK/ChatterPy" }
chatterbot-corpus = "^1.2.0"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl" }
translate = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
